# toga

android/src/toga_android/: icons.py
cocoa/src/toga_cocoa/: icons.py  statusicons.py
core/src/toga/: icons.py
dummy/src/toga_dummy/: icons.py
examples/label/: README.rst  pyproject.toml
examples/label/label/: __main__.py  app.py
gtk/src/toga_gtk/: icons.py
iOS/src/toga_iOS/: icons.py
iOS/src/toga_iOS/libs/: uikit.py
src/cocoa/toga_cocoa/libs/: appkit.py  foundation.py
src/cocoa/toga_cocoa/widgets/: label.py
src/core/toga/widgets/: label.py
textual/src/toga_textual/: icons.py
winforms/src/toga_winforms/: icons.py
